--- a/package.json
+++ b/package.json
@@ -20,22 +20,29 @@
   },
   "homepage": "https://github.com/spring-guides/tut-react-and-spring-data-rest",
   "dependencies": {
+    "jest-environment-jsdom": "^29.7.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "rest": "^1.3.2",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
+    "ts-jest": "^29.1.2",
     "when": "^3.7.8"
   },
   "scripts": {
     "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
-    "start": "webpack serve --config webpack.config.js"
+    "start": "webpack serve --config webpack.config.js",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/react": "^14.1.2",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^8.3.0",
+    "jest": "^29.7.0",
+    "react-test-renderer": "^16.14.0",
     "webpack": "^4.47.0",
     "webpack-cli": "^3.3.12"
   }
